ff-macros/tests/field_list_failures/field_not_reflect.stderr
error[E0277]: the trait bound `NotReflect: Reflect` is not satisfied
 --> tests/field_list_failures/field_not_reflect.rs:7:9
  |
7 |     field: NotReflect,
  |            ^^^^^^^^^^ the trait `Reflect` is not implemented for `NotReflect`
  |
  = help: the following other types implement trait `Reflect`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for the cast from `&NotReflect` to `&(dyn Reflect + 'static)`
