ff-macros/tests/field_list_failures/field_not_reflect.rs
use ff_macros::*;

struct NotReflect;

#[derive(FieldList)]
struct Test {
	field: NotReflect,
}

fn main() {}